# autosample

./: .gitignore  Autosample - CLI Autosampler User Guide.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
autosample-cli/: Cargo.toml
autosample-cli/src/: cli.rs  main.rs
autosample-core/: Cargo.toml
autosample-core/src/: audio.rs  dsp.rs  engine.rs  export.rs  lib.rs  midi.rs  parse.rs  ringbuf.rs  types.rs
autosample-gui/: Cargo.toml  build.rs
autosample-gui/src/: app.rs  device_scan.rs  main.rs  state.rs
autosample-gui/src/ui/: devices.rs  mod.rs  processing.rs  progress.rs  session.rs  single_screen.rs
autosample-gui/windows/: app.manifest  build-installer.ps1  build-msix.ps1
autosample-gui/windows/msix/: AppxManifest.xml.template
scr/: README.md  audio.rs  dsp.rs  engine.rs  midi.rs
scripts/: generate_bundle_icons.py  render_guide_pdf.py
src/: audio.rs  cli.rs  engine.rs  export.rs  main.rs  midi.rs  ringbuf.rs  types.rs
