[workspace]
members = [
    "autosample-core",
    "autosample-cli",
    "autosample-gui",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
chrono = "0.4"

# Audio/MIDI
cpal = "0.15"
midir = "0.9"
hound = "3.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# GUI
eframe = "0.29"
egui = "0.29"