[package]
name = "autosample-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autosample"
path = "src/main.rs"

[dependencies]
autosample-core = { path = "../autosample-core" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = "3.5"