[package]
name = "autosample-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autosample"
path = "src/main.rs"

[dependencies]
autosample-core = { path = "../autosample-core" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = "3.5"