[package]
name = "autosample-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }

cpal = { workspace = true }
midir = { workspace = true }
hound = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }