[package]
name = "autosample-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
console = []

[[bin]]
name = "autosample_gui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
autosample-core = { path = "../autosample-core" }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { version = "0.29", features = ["image"] }
midir = { workspace = true }
rfd = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Autosample"
identifier = "com.autosample.gui"
short_description = "Automatic MIDI autosampler with GUI."
long_description = "Autosample triggers MIDI notes, records audio input, and exports organized multisamples."
icon = ["assets/logo.png"]
osx_info_plist_ext = { NSMicrophoneUsageDescription = "Autosample needs microphone access to record audio from your selected input device." }
