[package]
name = "autosample-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autosample-gui"
path = "src/main.rs"

[dependencies]
autosample-core = { path = "../autosample-core" }
eframe = { workspace = true }
egui = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
midir = { workspace = true }
rfd = "0.14"
egui_extras = { version = "0.29", features = ["image"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Media_Capture",
    "Foundation",
    "Win32_System_WinRT",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
osx_info_plist_ext = { NSMicrophoneUsageDescription = "Autosample needs microphone access to record audio from your selected input device." }